# palang

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  setup.py  snapcraft.yaml
docs/: conf.py  index.md  palang_lexer.py  requirements.txt
docs/explanations/: all-explanations.md
docs/how-to-guides/: all-guides.md
docs/references/: all-references.md
docs/tutorials/: all-tutorials.md
palang-cli/: Cargo.toml
palang-cli/src/: assembly_path_util.rs  dialog_utils.rs  main.rs  profile.rs
palang-cli/src/commands/: compile.rs  connect.rs  disconnect.rs  mod.rs  profiles.rs  projects.rs  run.rs  serve.rs  status.rs
palang-cli/src/pretty_prints/: profile.rs  project.rs
palang-cli/src/server_proxy/: connection.rs  mod.rs
palang-cli/src/server_proxy/handlers/: mod.rs  profiles.rs  projects.rs  status.rs
palang-cli/src/server_proxy/models/: assembly.rs  mod.rs  profile.rs  project.rs  status.rs
palang-compiler/: Cargo.toml
palang-server/: Cargo.toml
palang-server/src/: lib.rs
palang-server/src/api/v1/: mod.rs  server.rs
palang-server/src/api/v1/models/: assembly.rs  mod.rs  profile.rs  project.rs
palang-server/src/api/v1/routes/: assemblies.rs  mod.rs  profiles.rs  projects.rs  status.rs  tasks.rs
palang-server/src/api/v1/services/: assembly.rs  mod.rs  profile.rs  project.rs  status.rs  storage.rs
palang-virtual-machine/: Cargo.toml
palang-vs-code-syntax-highlighting/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
palang_pygments.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
search/: search_index.json
(+36 files in other folders)
