[package]
name = "palang"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_yaml = "0.9.34"
tokio = { version = "1.39.3", features = ["full"] }

[dependencies.palang-compiler]
path = "../palang-compiler"

[dependencies.palang-virtual-machine]
path = "../palang-virtual-machine"
