[package]
name = "palang-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
clap = { version = "4.5.16", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_yaml = "0.9.34"
tabled = "0.16.0"

[dependencies.palang-virtual-machine]
path = "../palang-virtual-machine"
